Revert "New user page and recommended courses need spacing bug (3301)"
This reverts commit ae1dac77722b30927e2e277f46115726cb056819.

--- a/Zbang.Cloudents.Mobile/Content/Dashboard.less
+++ b/Zbang.Cloudents.Mobile/Content/Dashboard.less
@@ -64,11 +64,6 @@
         .searchLink {
             width: 96%;
         }
-        ~ .recommendedClasses {
-            h2 {
-                margin-top: 0; //override
-            }
-        }
     }
     .searchLink {
         margin: 15px auto;
@@ -223,7 +218,6 @@ overflow-x: hidden;
         font-size: 16px;
         font-weight: normal;
         background: #eee;
-        margin-top: 14px;
     }
 }
 .recommendedList {
@@ -313,6 +307,7 @@ overflow-x: hidden;
 /*#endregion */
 
 /*#region menu */
+
 .menu {
 
     padding-left: 10px; //rtl
