--- a/Zbang.Cloudents.Mobile/Content/Dashboard.rtl.css
+++ b/Zbang.Cloudents.Mobile/Content/Dashboard.rtl.css
@@ -64,9 +64,6 @@
 .welcome.closed .searchLink {
   width: 96%;
 }
-.welcome.closed ~ .recommendedClasses h2 {
-  margin-top: 0;
-}
 .welcome .searchLink {
   margin: 15px auto;
   width: 270px;
@@ -197,7 +194,6 @@
   font-size: 16px;
   font-weight: normal;
   background: #eee;
-  margin-top: 14px;
 }
 .recommendedList {
   overflow: hidden;
